DT-1613 fixes alignment of signup form button

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1075,6 +1075,7 @@ textarea {
         button {
             position: relative;
             vertical-align: top;
+            margin-left: 0;
         }
         input {
             border: 1px solid darken(@color-swatch7, 2%);
